force-app/main/default/objects/Payment_Deposit_Fine_Details__c/Payment_Deposit_Fine_Details__c.object-meta.xml
<CustomObject>
    <label>Payment / Deposit / Fine Details</label>
    <nameField>
        <displayFormat>PDD-{YYYY}{MM}{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment / Deposit / Fine Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>