force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment / Deposit / Fine Details</relationshipLabel>
    <relationshipName>Payment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>