force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>CASE(
RecordType.DeveloperName,
&quot;Fine&quot;, Total_Fine_Amount__c,
&quot;Deposit&quot;, Total_Deposit_Amount__c,
&quot;Payment&quot;, Payment_Amount__c, NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>