force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Booking_Reference_PNR__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_PNR__c</fullName>
    <label>Booking Reference(PNR)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>