force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Case_Details__c.field-meta.xml
<CustomField>
    <fullName>Case_Details__c</fullName>
    <label>Case Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>