force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>Master-detail to case object to associate/roll up payment details to case object</description>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Payment / Deposit / Fine Details</relationshipLabel>
    <relationshipName>Payment_Deposit_Fine_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>