force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Case_Route__c.field-meta.xml
<CustomField>
    <fullName>Case_Route__c</fullName>
    <formula>TEXT(Case_ID__r.Route__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Route</label>
    <type>Text</type>
</CustomField>