force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Cheque_Bounced_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounced_Date__c</fullName>
    <label>Cheque Bounced Date</label>
    <type>DateTime</type>
</CustomField>