force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Cheque_Cashed_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Cashed_Date__c</fullName>
    <label>Cheque Cashed Date</label>
    <type>DateTime</type>
</CustomField>