force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Cheque_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Clearance_Date__c</fullName>
    <label>Cheque Clearance Date</label>
    <type>Date</type>
</CustomField>