force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Cheque_No__c.field-meta.xml
<CustomField>
    <fullName>Cheque_No__c</fullName>
    <label>Cheque No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>