force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Cheque_Status__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Status__c</fullName>
    <description>Recording Cheque Status from SAP</description>
    <label>Cheque Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Cashed</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>