force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Completion_Rate__c</fullName>
    <label>Completion Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>