force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment / Deposit / Fine Details</relationshipLabel>
    <relationshipName>Payment_Deposit_Fine_Details</relationshipName>
    <type>Lookup</type>
</CustomField>