force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Contact_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_2__c</fullName>
    <formula>Contact__r.Alternate_Email_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email 2</label>
    <type>Text</type>
</CustomField>