force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Credit_Balance_has_been_Recovered__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance_has_been_Recovered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Account Credit Balance has been recovered</description>
    <label>Credit Balance has been Recovered</label>
    <type>Checkbox</type>
</CustomField>