force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Deposit_Amount_Returned__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Returned__c</fullName>
    <label>Deposit Amount Returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>