force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Due_Date__c</fullName>
    <label>Deposit Due Date</label>
    <type>Date</type>
</CustomField>