force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Deposit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Reason__c</fullName>
    <label>Deposit Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>