force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Received</label>
    <type>Checkbox</type>
</CustomField>