force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Deposit_Returned__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Returned</label>
    <type>Checkbox</type>
</CustomField>