force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Deposit_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Returned_Date__c</fullName>
    <label>Deposit Returned Date</label>
    <type>Date</type>
</CustomField>