force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Deposit_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Reviewed</label>
    <type>Checkbox</type>
</CustomField>