force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Fine_Amount_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount_Per_Person__c</fullName>
    <label>Fine Amount Per Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>