force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Fine_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Fine_Due_Date__c</fullName>
    <label>Fine Due Date</label>
    <type>Date</type>
</CustomField>