force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Fine_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Fine_Reasons__c</fullName>
    <label>Fine Reasons</label>
    <type>TextArea</type>
</CustomField>