force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Fine_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fine_Received_Amount__c</fullName>
    <label>Fine Received Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>