force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Fine_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Fine_Received_Date__c</fullName>
    <label>Fine Received Date</label>
    <type>Date</type>
</CustomField>