force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Immediate_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Cheque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Cheque</label>
    <type>Checkbox</type>
</CustomField>