force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/No_of_Persons__c.field-meta.xml
<CustomField>
    <fullName>No_of_Persons__c</fullName>
    <label>No. of Persons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>