force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Payment_Balance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Balance__c</fullName>
    <formula>Case_ID__r.Payment_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>