force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
                <isActive>false</isActive>
                <label>Deposit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>