force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue Ticket</fullName>
            </value>
            <value>
                <fullName>Re-Issue</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>