force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Replenishment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Replenishment_Amount__c</fullName>
    <label>Replenishment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>