force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Replenishment_Status__c.field-meta.xml
<CustomField>
    <fullName>Replenishment_Status__c</fullName>
    <label>Replenishment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replenishment Receive</fullName>
            </value>
            <value>
                <fullName>Replenishment Review on BPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>