force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Deposit_Fine_Details</relationshipName>
    <type>Lookup</type>
</CustomField>