force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Seat_Usage__c.field-meta.xml
<CustomField>
    <fullName>Seat_Usage__c</fullName>
    <formula>Case_ID__r.Seats_Usage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seat Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>