force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit Required</fullName>
            </value>
            <value>
                <fullName>Deposit Received</fullName>
            </value>
            <value>
                <fullName>Deposit Reviewed</fullName>
            </value>
            <value>
                <fullName>Deposit Returned</fullName>
            </value>
            <value>
                <fullName>Deposit Cancel</fullName>
            </value>
            <value>
                <fullName>Fine Required</fullName>
            </value>
            <value>
                <fullName>Fine Received</fullName>
            </value>
            <value>
                <fullName>Fine Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>