force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Sync_BPM_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Sync_BPM_Error_Message__c</fullName>
    <label>Sync BPM Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>