force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Sync_BPM_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_BPM_Status__c</fullName>
    <label>Sync BPM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requesting</fullName>
            </value>
            <value>
                <fullName>Succeeded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>