force-app/main/default/objects/Payment_Deposit_Fine_Details__c/fields/Total_Fine_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Fine_Amount__c</fullName>
    <formula>No_of_Persons__c * Fine_Amount_Per_Person__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fine Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>