force-app/main/default/objects/Payment_Deposit_Fine_Details__c/recordTypes/Fine.recordType-meta.xml
<RecordType>
    <fullName>Fine</fullName>
    <active>true</active>
    <label>Fine</label>
</RecordType>