force-app/main/default/objects/Payment_Deposit_Fine_Details__c/recordTypes/Payment.recordType-meta.xml
<RecordType>
    <fullName>Payment</fullName>
    <active>true</active>
    <label>Payment</label>
</RecordType>