force-app/main/default/objects/Payment_Deposit_Fine_Details__c/recordTypes/Replenishment.recordType-meta.xml
<RecordType>
    <fullName>Replenishment</fullName>
    <active>true</active>
    <label>Replenishment</label>
</RecordType>