force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Cash_Payment_Disallow_Cheque_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Cash_Payment_Disallow_Cheque_Details</fullName>
    <active>true</active>
    <description>For cash payment, do not allow entering of cheque details</description>
    <errorConditionFormula>NOT(ISPICKVAL(Payment_Mode__c,&quot;Cheque&quot;)) &amp;&amp; 
(NOT(ISBLANK( Cheque_No__c )) || NOT(ISBLANK( Cheque_Clearance_Date__c )))</errorConditionFormula>
    <errorMessage>Please do not enter cheque details for transaction through cash/bank transfer</errorMessage>
</ValidationRule>