force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Cheque_Clearance_must_earlier_Guarantee.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_Clearance_must_earlier_Guarantee</fullName>
    <active>true</active>
    <description>Cheque Clearance date must be earlier than Account Bank Guarantee Expiry Date</description>
    <errorConditionFormula>NOT(ISBLANK(Cheque_Clearance_Date__c)) &amp;&amp;
NOT(ISBLANK( Account_ID__r.Last_Bank_Guarantee_Expiry_Date__c )) &amp;&amp;
Cheque_Clearance_Date__c &gt; Account_ID__r.Last_Bank_Guarantee_Expiry_Date__c &amp;&amp;
RecordType.DeveloperName = &quot;Payment&quot;</errorConditionFormula>
    <errorDisplayField>Cheque_Clearance_Date__c</errorDisplayField>
    <errorMessage>Cheque Clearance date must be earlier than Account Bank Guarantee Expiry Date</errorMessage>
</ValidationRule>