force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Cheque_Clearance_must_later_Issuance.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_Clearance_must_later_Issuance</fullName>
    <active>true</active>
    <description>Cheque Clearance date must  be later than Issuance date</description>
    <errorConditionFormula>NOT(ISBLANK(Cheque_Clearance_Date__c)) &amp;&amp; 
NOT(ISBLANK(Cheque_Issuance_Date__c)) &amp;&amp; 
Cheque_Issuance_Date__c &gt; Cheque_Clearance_Date__c</errorConditionFormula>
    <errorMessage>Cheque Clearance date must  be later than Cheque Issuance date.</errorMessage>
</ValidationRule>