force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Cheque_Number_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_Number_is_Required</fullName>
    <active>true</active>
    <description>Cheque number, clearance date, and issuance date are required for cheque payment</description>
    <errorConditionFormula>ISPICKVAL(Payment_Mode__c,&quot;Cheque&quot;) &amp;&amp; 
(
  ISBLANK(Cheque_No__c) || 
  ISBLANK(Cheque_Clearance_Date__c) ||
  ISBLANK(Cheque_Issuance_Date__c)
)</errorConditionFormula>
    <errorMessage>Please enter the cheque number, cheque clearance date, and cheque issuance date for cheque payment.</errorMessage>
</ValidationRule>