force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Credit_Balance_is_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Balance_is_Negative</fullName>
    <active>false</active>
    <description>Check that if the credit balance is negative after deducting the cheque amount, disallow the payment to be saved</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Payment&quot; &amp;&amp; ISPICKVAL(Payment_Mode__c,&quot;Cheque&quot;) &amp;&amp;  (Account_ID__r.Credit_Balance__c - Payment_Amount__c) &lt;= 0</errorConditionFormula>
    <errorMessage>Payment cannot be processed as credit balance is negative.</errorMessage>
</ValidationRule>