force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Credit_Balance_is_Negative_new.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Balance_is_Negative_new</fullName>
    <active>true</active>
    <description>Check that if the credit balance is negative after deducting the cheque amount, disallow the payment to be saved</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Payment&quot; &amp;&amp; ISPICKVAL(Payment_Mode__c,&quot;Cheque&quot;) &amp;&amp;  (Account_ID__r.Credit_Balance2__c - Payment_Amount__c) &lt;= 0 &amp;&amp;
ISNEW()</errorConditionFormula>
    <errorMessage>Payment cannot be processed as credit balance is negative.</errorMessage>
</ValidationRule>