force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Deposit_Received_Amount_Does_Not_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Received_Amount_Does_Not_Match</fullName>
    <active>true</active>
    <description>Deposit Received Amount must be equal to deposit amount</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Deposit&quot; &amp;&amp; Deposit_Amount_Received__c &lt;&gt; (Deposit_Amount_Per_Person__c *  No_of_Persons__c)</errorConditionFormula>
    <errorDisplayField>Deposit_Amount_Received__c</errorDisplayField>
    <errorMessage>Deposit amount received does not match total deposit amount imposed.  Please check that the amount received tally with the total deposit amount imposed.</errorMessage>
</ValidationRule>