force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Deposit_Received_Cannot_Revert.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Received_Cannot_Revert</fullName>
    <active>true</active>
    <description>Status cannot revert to previous status</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Deposit&quot; &amp;&amp;
ISPICKVAL(Status__c, &quot;Deposit Required&quot;) &amp;&amp;
Deposit_Received__c = TRUE &amp;&amp;
NOT(ISBLANK(Deposit_Received_Date__c)) &amp;&amp;
NOT(ISBLANK(Deposit_Amount_Received__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Once deposit is received, the status cannot be reverted.</errorMessage>
</ValidationRule>