force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Deposit_Received_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Received_Date_is_Required</fullName>
    <active>true</active>
    <description>Deposit Received Date is required if deposit is received</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Deposit&quot; &amp;&amp;  NOT(ISBLANK(Deposit_Amount_Received__c)) &amp;&amp; ISBLANK(Deposit_Received_Date__c)</errorConditionFormula>
    <errorDisplayField>Deposit_Received_Date__c</errorDisplayField>
    <errorMessage>Please enter the deposit received date</errorMessage>
</ValidationRule>