force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Deposit_Received_Without_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Received_Without_Details</fullName>
    <active>true</active>
    <description>Cannot change status to Deposit Received without entering the Deposit Received Details</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Deposit&quot; &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &quot;Deposit Received&quot;) &amp;&amp;
ISBLANK(TEXT(Payment_Mode__c))</errorConditionFormula>
    <errorMessage>Please enter the Payment Mode, Deposit Received Amount and Deposit Received Date before setting status to &apos;Deposit Received&apos;.</errorMessage>
</ValidationRule>