force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Deposit_Returned_Cannot_Revert.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Returned_Cannot_Revert</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Deposit&quot; &amp;&amp;
NOT(ISPICKVAL(Status__c, &quot;Deposit Returned&quot;)) &amp;&amp;
Deposit_Returned__c = TRUE &amp;&amp;
NOT(ISBLANK(Deposit_Returned_Date__c)) &amp;&amp;
NOT(ISBLANK(Deposit_Amount_Returned__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Once deposit is returned, status cannot be reverted.</errorMessage>
</ValidationRule>