force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Deposit_Reviewed_Only_Allow_B2BSales.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Reviewed_Only_Allow_B2BSales</fullName>
    <active>true</active>
    <description>Only allow B2B Sales team to update the status of deposit record to Deposit Reviewed</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &quot;Deposit Reviewed&quot;) &amp;&amp;
NOT(CONTAINS($Profile.Name, &quot;B2B&quot;)) &amp;&amp;
NOT(CONTAINS($Profile.Name, &quot;System Admin&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Deposit can only be reviewed by B2B Sales Team</errorMessage>
</ValidationRule>