force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Deposit_To_Be_Reviewed_Before_Returned.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_To_Be_Reviewed_Before_Returned</fullName>
    <active>true</active>
    <description>Deposit must be reviewed first before it can returned</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Deposit&quot; &amp;&amp;
Deposit_Reviewed__c = FALSE &amp;&amp;
(
  NOT(ISBLANK(Deposit_Amount_Returned__c)) ||
  NOT(ISBLANK(Deposit_Returned_Date__c))
)</errorConditionFormula>
    <errorMessage>Please review the deposit record before issuing a return of the deposit</errorMessage>
</ValidationRule>