force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Fine_Amount_and_Received_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Fine_Amount_and_Received_Date_Required</fullName>
    <active>true</active>
    <description>Fine amount and fine received date is required when payment mode is selected</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Fine&quot; &amp;&amp;
NOT(ISBLANK(TEXT(Payment_Mode__c))) &amp;&amp;
(
  ISBLANK(Fine_Received_Amount__c) ||
  ISBLANK(Fine_Received_Date__c)
)</errorConditionFormula>
    <errorMessage>Please enter the fine received amount and fine received date</errorMessage>
</ValidationRule>