force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Fine_Amount_Received_Does_Not_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Fine_Amount_Received_Does_Not_Match</fullName>
    <active>true</active>
    <description>Fine amount received does not match fine amount set</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Fine&quot; &amp;&amp;  Fine_Received_Amount__c  &lt;&gt; (Fine_Amount_Per_Person__c *  No_of_Persons__c)</errorConditionFormula>
    <errorDisplayField>Fine_Received_Amount__c</errorDisplayField>
    <errorMessage>Fine amount received does not match total fine amount imposed.  Please check that the amount received tally with the total fine amount imposed.</errorMessage>
</ValidationRule>