force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Fine_Received_Without_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Fine_Received_Without_Details</fullName>
    <active>true</active>
    <description>Cannot change status to Fine Received without entering the Fine Received Details</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Fine&quot; &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &quot;Fine Received&quot;) &amp;&amp;
ISBLANK(TEXT(Payment_Mode__c))</errorConditionFormula>
    <errorMessage>Please enter the Payment Mode, Fine Received Amount and Fine Received Date before setting status to &apos;Fine Received&apos;.</errorMessage>
</ValidationRule>