force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Payment_Disallow_for_Non_Active_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Disallow_for_Non_Active_Accounts</fullName>
    <active>true</active>
    <description>Payment is not allowed for non-active accounts</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Payment&quot; &amp;&amp; 
ISPICKVAL(Payment_Mode__c, &quot;Cheque&quot;) &amp;&amp;
NOT(ISPICKVAL( Account_ID__r.Status__c ,&quot;Active&quot;))</errorConditionFormula>
    <errorMessage>Payments can only be made for accounts with active status.</errorMessage>
</ValidationRule>