force-app/main/default/objects/Payment_Deposit_Fine_Details__c/validationRules/Payment_Mode_Amount_Cannot_Be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Mode_Amount_Cannot_Be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Payment&quot; &amp;&amp;
(
NOT(ISBLANK(TEXT(Payment_Mode__c))) &amp;&amp;
ISCHANGED(Payment_Mode__c)

)</errorConditionFormula>
    <errorMessage>Payment Mode cannot be modified after the payment record is saved.</errorMessage>
</ValidationRule>